Links at bottom added

--- a/OpenLegendSheet.html
+++ b/OpenLegendSheet.html
@@ -207,7 +207,7 @@
 
         </div> <!--Left-->
 
-        <div class="column" style="width: 70%; padding-left: 5%; padding-right: 5%;">
+        <div class="column" style="width: 70%; padding-left: 5%; padding-right: 5%; margin-bottom: 50px;">
 
             <div class="row" style="margin-bottom: 20px;">
                 <span style="float:left;">
@@ -424,6 +424,12 @@
             </div> <!--Equipment-->
 
         </div> <!--Right-->
+
+        <div class="row" style="align-content: center; text-align:center;">
+            <a href="https://openlegendrpg.com/feats" target="_blank" style="margin: 25px;">Feats</a>
+            <a href="https://openlegendrpg.com/boons" target="_blank" style="margin: 25px;">Boons</a>
+            <a href="https://openlegendrpg.com/banes" target="_blank" style="margin: 25px;">Banes</a>
+        </div>
 
     </div>
 </body>
