--- a/OpenLegendSheet.html
+++ b/OpenLegendSheet.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<body>
+<body style="background-color:#404040; color: white;">
 
     <div class="inline">
         <input type="file" id="fileObject" onchange="NewFileChosen()" />
